update service orders controller
