# db/schema.rb
@@ -48,6 +48,8 @@ ActiveRecord::Schema[7.2].define(version: 2025_08_09_214743) do
   create_table "metrics", force: :cascade do |t|
     t.integer "service_order_count", default: 0
     t.decimal "average_time", default: "0.0"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
   end
 
   create_table "service_order_items", force: :cascade do |t|
